# CI2024_lab3

./: README.md  n-puzzle-a-star.py  n-puzzle-gbf.py  n-puzzle.ipynb  pyproject.toml
