[tool.poetry]
name = "ci2024-lab3"
version = "0.1.0"
description = ""
authors = ["Daviruss1969 <lukasloiodic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
tqdm = "^4.67.0"
numpy = "^2.1.3"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
